NavBar: Added min height to logo to prevent stretching. Hero: Adjusted size of Agile logo to prevent it getting too large during desktop mode.

--- a/style/research-specific.css
+++ b/style/research-specific.css
@@ -13,6 +13,10 @@ html {
     align-items: center;
 }
 
+.hero-logo {
+    max-width:500px;
+}
+
 .hero-graphic {
     width: 200px;
 }
